Fix how contributor profile links are displayed on mobile

--- a/app/javascript/stylesheets/redesign/_contributor_profile.scss
+++ b/app/javascript/stylesheets/redesign/_contributor_profile.scss
@@ -28,8 +28,10 @@
     content: ':';
   }
 
-  dd {
-    margin-top: -27px;
-    margin-left: 20%;
+  @media only screen and (min-width: $tablet-min) {
+    dd {
+      margin-top: -27px;
+      margin-left: 20%;
+    }
   }
 }
